# rapidfuzz-android

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/muntashirakon/rapidfuzz/testapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
rapidfuzz/: build.gradle
rapidfuzz/src/main/: AndroidManifest.xml
rapidfuzz/src/main/cpp/: CMakeLists.txt  io_github_muntashirakon_rapidfuzz_RapidFuzz.cpp  io_github_muntashirakon_rapidfuzz_RapidFuzz.h  io_github_muntashirakon_rapidfuzz_RapidFuzzCached.cpp  io_github_muntashirakon_rapidfuzz_RapidFuzzCached.h
rapidfuzz/src/main/java/io/github/muntashirakon/rapidfuzz/: RapidFuzz.java  RapidFuzzCached.java
